Closed Bug 1672419 Opened 5 years ago Closed 5 years ago

WebRTC system tray context menu is positioned away from the icon with high DPI

Categories

(Firefox :: Site Permissions, defect, P2)

defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox83 --- verified
firefox84 --- verified

People

(Reporter: itiel_yn8, Assigned: mconley)

References

(Depends on 1 open bug)

Details

Attachments

(1 file)

STR:

  1. Set DPI to anything above 100%
  2. Open https://www.webrtc-experiment.com/Pluginfree-Screen-Sharing/#8135501154568966
  3. Click "Share you screen" and select a window
  4. Right click the system icon tray

AR:
bug 1669649 comment 8

ER:
The context menu should be positioned where the mouse right clicked.

Severity: -- → S3
Priority: -- → P2
Depends on: 1663784
Assignee: nobody → mconley
Status: NEW → ASSIGNED

I can confirm this issue's reproduction on Windows 10 with Nightly v84.0a1 and Beta v83.0b4. Modifying the Display Scaling to any other option than 100% will improperly position the context menu incorrectly.

I would think that this issue deserves a severity promotion considering that a lot of users use scaling on their computers. Please revert if you think this is incorrect.

Severity: S3 → S2
Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f36a4e0cb84c Make sure SystemStatusBar popup menus appear in the right spot regardless of device scaling. r=mhowell
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

Comment on attachment 9183027 [details]
Bug 1672419 - Make sure SystemStatusBar popup menus appear in the right spot regardless of device scaling. r?mhowell

Beta/Release Uplift Approval Request

  • User impact if declined: Users with high DPI display settings on Windows will find that the WebRTC device indicator menus are positioned strangely upon opening.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce:
  1. Be using Windows with a camera and microphone connected
  2. Visit https://permission.site/, and click on "Camera + Microphone", and allow Firefox to share the camera and microphone devices.
  3. Find the camera and/or microphone device indicators in the Windows system tray. They might be collapsed into the overflow area of the tray.
  4. Click on either of those icons.
  5. Repeat using different DPI settings

ER:

A menu should appear close to the icon, regardless of DPI setting.

Note that changing DPI settings in Windows can be done by following these instructions: https://support.corel.com/hc/en-us/articles/115001485408-Display-Options-How-to-change-DPI-Scaling-Level-for-displays-in-Windows-10-

  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We're changing some positioning calculations in a very isolated part of the code base, using well-understood mechanisms.
  • String changes made/needed: None.
Attachment #9183027 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

I can verify this fix in Nightly v84.0a1 from 29-10-2020. Thank you!

Waiting for possible uplifts to verify.

Status: RESOLVED → VERIFIED
Flags: qe-verify+ → needinfo?(daniel.bodea)

Comment on attachment 9183027 [details]
Bug 1672419 - Make sure SystemStatusBar popup menus appear in the right spot regardless of device scaling. r?mhowell

Verified on nightly, approved for 83 beta 6, thanks.

Attachment #9183027 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Added qe+ for Beta verification.

Flags: qe-verify+

I have verified this fix in Beta v83.0b6 on Windows 10. Thank you.

Flags: qe-verify+
Flags: needinfo?(daniel.bodea)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: