Bug 1672419 - Make sure SystemStatusBar popup menus appear in the right spot regardless of device scaling. r=mhowell, a=pascal

Differential Revision: https://phabricator.services.mozilla.com/D94372