widget/windows/SystemStatusBar.cpp
@@ -17,6 +17,8 @@
 #include "nsMenuPopupFrame.h"
 #include "nsXULPopupManager.h"
 #include "IconLoaderHelperWin.h"
+#include "nsIDocShell.h"
+#include "nsDocShell.h"
 
 namespace mozilla::widget {
 
@@ -198,6 +200,7 @@ LRESULT StatusBarEntry::OnMessage(HWND hWnd, UINT msg, WPARAM wp, LPARAM lp) {
     if (!popupFrame) {
       return TRUE;
     }
+
     nsIWidget* widget = popupFrame->GetNearestWidget();
     if (!widget) {
       return TRUE;
@@ -208,6 +211,17 @@ LRESULT StatusBarEntry::OnMessage(HWND hWnd, UINT msg, WPARAM wp, LPARAM lp) {
       return TRUE;
     }
 
+    nsCOMPtr<nsIDocShell> docShell = popupFrame->PresContext()->GetDocShell();
+    nsCOMPtr<nsIBaseWindow> baseWin = do_QueryInterface(docShell);
+    if (!baseWin) {
+      return TRUE;
+    }
+
+    double scale = 1.0;
+    baseWin->GetUnscaledDevicePixelsPerCSSPixel(&scale);
+    int32_t x = NSToIntRound(GET_X_LPARAM(wp) / scale);
+    int32_t y = NSToIntRound(GET_Y_LPARAM(wp) / scale);
+
     // The menu that is being opened is a Gecko <xul:menu>, and the popup code
     // that manages it expects that the window that the <xul:menu> belongs to
     // will be in the foreground when it opens. If we don't do this, then if the
@@ -217,8 +231,7 @@ LRESULT StatusBarEntry::OnMessage(HWND hWnd, UINT msg, WPARAM wp, LPARAM lp) {
     // focuses any window in the parent process).
     ::SetForegroundWindow(win);
     nsXULPopupManager* pm = nsXULPopupManager::GetInstance();
-    pm->ShowPopupAtScreen(popupFrame->GetContent(), GET_X_LPARAM(wp),
-                          GET_Y_LPARAM(wp), false, nullptr);
+    pm->ShowPopupAtScreen(popupFrame->GetContent(), x, y, false, nullptr);
   }
 
   return DefWindowProc(hWnd, msg, wp, lp);
